# nexus-dev-agent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  security.yml
docs/: conf.py  index.md
scripts/: build.sh  install.sh  release.sh  setup.sh
src/: App.tsx
src/components/: Layout.tsx
src/nexus_dev_agent/: __init__.py  agent.py  cli.py  config.py  exceptions.py
src/pages/: APIReference.tsx  Architecture.tsx  Documentation.tsx  Features.tsx  GettingStarted.tsx  Home.tsx  MaintenanceRoadmap.tsx  RiskAssessment.tsx  SecurityCompliance.tsx  TechnicalFeasibility.tsx  TestPlan.tsx  UserGuide.tsx
tests/: __init__.py  conftest.py
tests/unit/: test_config.py  test_exceptions.py
